---------------------------------------------------------------------------------------------------
Version: 3.1.5
Date: ????
  Changes:
    - Reduced the required omnite bricks for the burner mining drill from 4 to 1
    - Turned the omnium turbine into a burner generator
  Bugfixes:
    - Fixed that the belt required for a lab was not replaced with a basic belt
---------------------------------------------------------------------------------------------------
Version: 3.1.4
Date: 2021.07.26
  Changes:
    - Removed the automation sp requirement from gun turret and stone wall techs
    - Omnitor AB compat: added omnitors to Angels/Bobs buildings that have "moving parts"
    - New icon + animation for the omnium heat turbine
  Bugfixes:
    - Fixed a crash with certain combinations of bobsmods
    - Fixed that the basic belt item had a normal belt icon with bob reskins
    - Fixed that bobs logistics belt speed settings didnt affect basic belts
---------------------------------------------------------------------------------------------------
Version: 3.1.3
Date: 2021.07.23
  Changes:
    - Made energy and red science pack recipes slightly cheaper
  Bugfixes:
    - Fixed that bobs recipe changes on basic belts were overwritten
    - Fixed a crash when bobs burner electric generator setting was disabled
---------------------------------------------------------------------------------------------------
Version: 3.1.2
Date: 2021.07.22
  Features:
    - Readded Krastorio2 compatibility
  Changes:
    - The energy science pack is now added to all technologies
    - Adjusted the energy and automation science pack recipes
  Bugfixes:
    - Fixed that basic underground belts had the wrong length set
---------------------------------------------------------------------------------------------------
Version: 3.1.0
Date: 2021.07.21
  Features:
    - Complete rewrite
    - Added a new science pack that is gated before automation science and leads you to electricity